<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".authentication.SigninActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/company_name" />

        <EditText
            android:id="@+id/signinUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/login_hint_username"
            android:inputType="textPersonName"
            android:maxLength="24" />

        <EditText
            android:id="@+id/signinPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/login_hint_password"
            android:inputType="textPassword"
            android:maxLength="20" />

        <Button
            android:id="@+id/signinBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:stateListAnimator="@null"
            android:text="@string/login_button_text"
            android:textColor="@color/common_google_signin_btn_text_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actionForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_restore"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/actionSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_signup"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
