<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/about_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <include
            layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:background="@android:color/white"
        android:fitsSystemWindows="false"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="9"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingStart="5dp"
                    app:srcCompat="@mipmap/ic_icon" />

                <TextView
                    android:id="@+id/text_appname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="30sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_comemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/version"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_comemail"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/company_name"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/button4"
                android:layout_alignStart="@+id/button4"
                android:layout_centerVertical="true"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:text="Something wrong?  Have a cool idea? Send us an email!" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView17"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/colorPrimary"
                android:text="Send Feedback"
                android:textColor="@android:color/primary_text_dark" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:backgroundTint="@color/colorPrimary"
            android:text="Logout"
            android:textColor="@color/common_google_signin_btn_text_dark" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>